package edu.fiuba.algo3.Defenses.Deleter;

import edu.fiuba.algo3.Defenses.Defense;
import edu.fiuba.algo3.Plots.Plot;

public interface Deleter {
    void delete(Defense defense, Plot plot);
}
