 @startuml
'https://plantuml.com/class-diagram

interface Deleter{

    +delete(defense: Defense, plot: Plot)
}

class NullDeleter{

    +delete(defense: Defense, plot: Plot)
}

class SandTrapDeleter{

    +SandTrapDeleter(player: Player)
    +delete(defense: Defense, plot: Plot)

}

Deleter <|.. NullDeleter
Deleter <|.. SandTrapDeleter



@enduml